<resources>
    <string name="app_name">Kavics</string>
    <string name="title_kavic_list">Kavics</string>
    <string name="title_kavic_detail">Kavic Detail</string>
    <string name="btnCancel">Cancel</string>

    <string name="date_yyyy_MM_dd">%s %s %s</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="save">Save</string>
    <string name="title">Title:</string>
    <string name="select_deadline">Select deadline</string>
    <string name="every_day">Every day</string>

    <string name="description">Description</string>
    <string name="one_time_kavic">One time kavic</string>
    <string name="repeating_kavic">Repeating kavic</string>
    <string name="choose_deadline">Choose deadline</string>
    <string name="how_many_minutes">How many minutes</string>
    <string name="length">Length:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="choose_start_date">Start date</string>
    <string name="choose_end_date">End date</string>
    <string name="repeat_frequency_in_days">repeat frequency in days</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="edit_kavic">Edit Kavic</string>
    <string name="archive">Archive</string>
    <string name="repeating_kavics">Repeating Kavics</string>

    <string name="display_mins"> %$ mins</string>
    <string name="can_you_do_it_before_deadline">Can you do it before deadline?</string>
    <string name="add_button">Add button</string>

    <string name="info">Info</string>
    <string name="warning">WARNING: this app is in Beta and it is very likely that you will lose your saved tasks in the final version of the app.
     If you would like to see a new function in the app or you find a bug you can send me an email kavics.feedback@gmail.com
        Since Kavics is an open source project you can always found the source code here: https://github.com/MikoAdam/Kavics</string>


</resources>
