<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextKavicTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextKavicTitle"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:autofillHints="Title of the Kavic"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTitle"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnCreateKavic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelCreateKavic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancelCreateKavic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnCreateKavic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCreateKavic"
        app:layout_constraintTop_toTopOf="@+id/btnCreateKavic" />

    <Button
        android:id="@+id/btnDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_deadline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedDate"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textViewSelectedDate"
        android:layout_width="219dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>