<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create.CreateRepeatingKavic">

    <TextView
        android:id="@+id/textViewChosenEndDate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnChooseEndDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChosenStartDate" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/repeat_frequency_in_days"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChooseStartDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_start_date"
        app:layout_constraintBottom_toBottomOf="@+id/textViewChosenStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewChosenStartDate"
        app:layout_constraintTop_toTopOf="@+id/textViewChosenStartDate" />

    <TextView
        android:id="@+id/textViewChosenStartDate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnChooseStartDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/btnChooseEndDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_end_date"
        app:layout_constraintBottom_toBottomOf="@+id/textViewChosenEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewChosenEndDate"
        app:layout_constraintTop_toTopOf="@+id/textViewChosenEndDate" />

</androidx.constraintlayout.widget.ConstraintLayout>